# cmd/ambulance-api-service/main.go
@@ -1,12 +1,16 @@
 package main
 
 import (
+	"context"
 	"github.com/MatejLednicky/ambulance-webapi/api"
+	"github.com/MatejLednicky/ambulance-webapi/internal/ambulance_wl"
+	"github.com/MatejLednicky/ambulance-webapi/internal/db_service"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"log"
 	"os"
 	"strings"
-    "github.com/MatejLednicky/ambulance-webapi/internal/ambulance_wl"
+	"time"
 )
 
 func main() {
@@ -21,6 +25,23 @@ func main() {
 	}
 	engine := gin.New()
 	engine.Use(gin.Recovery())
+	corsMiddleware := cors.New(cors.Config{
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+		AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+		ExposeHeaders:    []string{""},
+		AllowCredentials: false,
+		MaxAge:           12 * time.Hour,
+	})
+	engine.Use(corsMiddleware)
+
+	// setup context update  middleware
+	dbService := db_service.NewMongoService[ambulance_wl.Ambulance](db_service.MongoServiceConfig{})
+	defer dbService.Disconnect(context.Background())
+	engine.Use(func(ctx *gin.Context) {
+		ctx.Set("db_service", dbService)
+		ctx.Next()
+	})
 
 	// request routings
 	ambulance_wl.AddRoutes(engine)
